--- a/Web.Statu/Views/Home/SnadneHledani.cshtml
+++ b/Web.Statu/Views/Home/SnadneHledani.cshtml
@@ -132,7 +132,7 @@
             </div>
             <div class="form-group">
                 <div class="col-sm-12">
-                    <button type="submit" name="hledatvse" value="1" class="btn btn-primary">Hledat ve všech databázích</button>
+                    <button type="submit" name="hledatvse" value="1" class="btn btn-primary">Hledat v celém Hlídači</button>
                     <br />
                     <button type="submit" name="hledatsmlouvy" value="1" class="btn btn-default btn-sm">Hledat pouze ve smlouvách</button>
                     <button type="submit" name="hledatvz" value="1" class="btn btn-default btn-sm">Hledat pouze ve veřejných zakázkách</button>
