--- a/Web.Statu/Views/Home/Subjekt.cshtml
+++ b/Web.Statu/Views/Home/Subjekt.cshtml
@@ -137,6 +137,9 @@
         @Html.Action("CachedAction_Child_2H", new { model = Model.firma, NameOfView = "Subjekt_Stat", auth = this.User.Identity.IsAuthenticated, key = Model.firma.ICO })
         @*@Html.Action("Subjekt_child", new { NameOfView = "Subjekt_Stat", firma = Model.firma })*@
     }
+
+    @Html.Action("CachedAction_Child_2H", new { model = Model.firma, NameOfView = "Subjekt_OtherDB", auth = this.User.Identity.IsAuthenticated, key = Model.firma.ICO })
+
 </div>
 
 @section onlyembed
