--- a/Web.Statu/Views/Home/Subjekt_Zahranicni.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_Zahranicni.cshtml
@@ -68,12 +68,12 @@
             <td>
                 @if (!string.IsNullOrEmpty(Model.ICO))
                 {
-                    @Util.AddSearchBtn("/hledat", $"ico:{Model.ICO}", $" Vyhledat tuto firmy ve všech databázích")
+                    @Util.AddSearchBtn("/hledat", $"ico:{Model.ICO}", $" Vyhledat tuto firmy v celém Hlídači")
                     @Util.AddWatchDog(this.User, $"ico:{Model.ICO}", null, "Pohlídat tuto firmu", "", prefillWDname: "Hlídat " + Model.Jmeno, btnCss: "btn btn-warning btn-xs", showWDList: false)
                 }
                 else
                 {
-                    @Util.AddSearchBtn("/hledat", $"\"{Model.Jmeno}\"", $" Vyhledat tuto firmy ve všech databázích")
+                    @Util.AddSearchBtn("/hledat", $"\"{Model.Jmeno}\"", $" Vyhledat tuto firmy v celém Hlídači")
                     @Util.AddWatchDog(this.User, $"\"{Model.Jmeno}\"", null, "Pohlídat tuto firmu", "", prefillWDname: "Hlídat " + Model.Jmeno, btnCss: "btn btn-warning btn-xs", showWDList: false)
                 }
             </td>
