--- a/Web.Statu/Views/Home/OsobaProfil.cshtml
+++ b/Web.Statu/Views/Home/OsobaProfil.cshtml
@@ -140,23 +140,36 @@
 
 
 
-
+<div style="padding-top:50px;"></div>
 
 <table class="table table-new table-new--dotted">
     <tbody>
         <tr>
-            <td>Hlídání osoby</td>
+            <th>Zkratka této osoby v hlídači</th>
             <td>
+                <h4>Hledání informací s vazbou na @Model.FullName()</h4>
+                <p>Pokud napíšete do hledání text <code>osobaId:{Model.NameId}</code>,
+                zobrazí se smlouvy, veřejné zakázky, dary a další informace, které mají vazbu na @Model.FullName()
+                nebo firmy touto osobou přímo či nepřímo vlastněnou či řízenou.
+                </p>
 
-                <h4>Hlídání emailem</h4>
-                <div>
-                    @Util.AddWatchDog(this.User, "OsobaId:" + Model.NameId, typeof(HlidacStatu.Lib.Data.Smlouva), "Hlídat nové smlouvy v registru smluv spojené s " + Model.FullName() + " a navázanými firmami", "", "", btnCss: "btn btn-warning btn-sm", prefillWDname: "Nové smlouvy pro " + Model.FullName())
-                    <br />
-                    @Util.AddWatchDog(this.User, "OsobaId:" + Model.NameId, typeof(HlidacStatu.Lib.Data.VZ.VerejnaZakazka), "Hlídat nové veřejné zakázky spojené s " + Model.FullName() + " a navázanými firmami", "", "", btnCss: "btn btn-warning btn-sm", prefillWDname: "Nové veřejné zakázky pro " + Model.FullName())
-                    <br />
-                    @Util.AddWatchDog(this.User, "OsobaId:" + Model.NameId, null, $"Hlídat všechny novinky o {Model.FullName()} a navázaných firmách v celém Hlídači", "", "", btnCss: "btn btn-warning btn-sm", prefillWDname: "Novinky pro " + Model.FullName())
-                </div>
-
+            </td>
+        </tr>
+        <tr>
+            <th>Sdílení osoby na sociálních sítích</th>
+            <td>
+                    @Util.ShareFacebook(Model.GetUrl(false))
+                    @Util.ShareTwitter(Model.GetUrl(false), $"{Model.Jmeno} na @HlidacStatu - {Model.InfoFacts().First().Render(false)}")
+                    @Util.ShareWidget(Model.GetUrl(false))
+            </td>
+        </tr>
+        <tr>
+            <th>Novinky o této osobě do mailu</th>
+            <td>
+                @Util.AddWatchDog(this.User, "OsobaId:" + Model.NameId, null,
+               $"Hlídat všechny změny o <b>{Model.FullName()}</b> a navázaných firmách",
+               btnCss: "btn btn-warning btn-sm", prefillWDname: "Novinky pro " + Model.FullName(),
+               showWDList: false, preBtnText: "")
 
             </td>
         </tr>
@@ -165,9 +178,9 @@
         @{
             string osobaInsQuery = $"{{0}}.osobaId:{Model.NameId}";
             //var oinsRes = HlidacStatu.Lib.Data.Insolvence.Insolvence.SimpleSearch("osobaid:" + Model.NameId, 1, 5, (int)HlidacStatu.Lib.Searching.InsolvenceSearchResult.InsolvenceOrderResult.LatestUpdateDesc, false, false);
-            var oinsDluznik = HlidacStatu.Lib.Data.Insolvence.Insolvence.SimpleSearch(string.Format(osobaInsQuery,"dluznici"), 1, 1, (int)HlidacStatu.Lib.Searching.InsolvenceSearchResult.InsolvenceOrderResult.FastestForScroll, false, false);
-            var oinsVeritel = HlidacStatu.Lib.Data.Insolvence.Insolvence.SimpleSearch(string.Format(osobaInsQuery,"veritele"), 1, 1, (int)HlidacStatu.Lib.Searching.InsolvenceSearchResult.InsolvenceOrderResult.FastestForScroll, false, false);
-            var oinsSpravce = HlidacStatu.Lib.Data.Insolvence.Insolvence.SimpleSearch(string.Format(osobaInsQuery,"spravci"), 1, 1, (int)HlidacStatu.Lib.Searching.InsolvenceSearchResult.InsolvenceOrderResult.FastestForScroll, false, false);
+            var oinsDluznik = HlidacStatu.Lib.Data.Insolvence.Insolvence.SimpleSearch(string.Format(osobaInsQuery, "dluznici"), 1, 1, (int)HlidacStatu.Lib.Searching.InsolvenceSearchResult.InsolvenceOrderResult.FastestForScroll, false, false);
+            var oinsVeritel = HlidacStatu.Lib.Data.Insolvence.Insolvence.SimpleSearch(string.Format(osobaInsQuery, "veritele"), 1, 1, (int)HlidacStatu.Lib.Searching.InsolvenceSearchResult.InsolvenceOrderResult.FastestForScroll, false, false);
+            var oinsSpravce = HlidacStatu.Lib.Data.Insolvence.Insolvence.SimpleSearch(string.Format(osobaInsQuery, "spravci"), 1, 1, (int)HlidacStatu.Lib.Searching.InsolvenceSearchResult.InsolvenceOrderResult.FastestForScroll, false, false);
 
             Dictionary<string, long> oinsolv = new Dictionary<string, long>();
             oinsolv.Add("dluznici|dlužník|dlužníka|dlužníkem", oinsDluznik.Total);
@@ -182,18 +195,12 @@
                 @foreach (var kv in oinsolv.OrderByDescending(m => m.Value))
                 {
                     var text = kv.Key.Split('|');
+                    string surl = Util.GetSearchUrl("/insolvence/hledat", string.Format(osobaInsQuery, text[0]));
 
                     <p>
-                        @Devmasters.Core.TextUtil.ShortenText(Model.FullName(), 35) osobně  @Html.Raw(Devmasters.Core.Lang.Plural.GetWithZero((int)kv.Value, " není v insolvečním rejstříku", " se vyskytuje v <b>jedné insolvenci</b>", " se vyskytuje v <b>{0} insolvencích</b>", " se vyskytuje v <b>{0} insolvencích</b>")) jako @text[1].
-                        @if (kv.Value > 0)
-                        {
-                            @Util.AddSearchBtn("/insolvence/hledat", string.Format(osobaInsQuery,text[0]), $" Vyhledat je.")
-                            @Util.AddWatchDog(this.User,string.Format(osobaInsQuery,text[0]), typeof(HlidacStatu.Lib.Data.Insolvence.Rizeni), "Pohlídat změny", "", prefillWDname: "Hlídat " + Model.FullName() + $" osobně jako {text[2]} v insolvencích", btnCss: "btn btn-warning btn-xs", showWDList: false)
-                        }
-                        else
-                        {
-                            @Util.AddWatchDog(this.User, string.Format(osobaInsQuery,text[0]), typeof(HlidacStatu.Lib.Data.Insolvence.Rizeni), $"Upozornit, když se stane {text[3]}", "", prefillWDname: "Hlídat " + Model.FullName() + $" osobně jako {text[2]} v insolvencích", btnCss: "btn btn-warning btn-xs", showWDList: false)
-                        }
+                        @Devmasters.Core.TextUtil.ShortenText(Model.FullName(), 35) osobně
+                        @Html.Raw(Devmasters.Core.Lang.Plural.GetWithZero((int)kv.Value,
+                           " není v insolvečním rejstříku", " se vyskytuje v <a href='" + surl + "'><b>jedné insolvenci</b></a>", " se vyskytuje v <a href='" + surl + "'><b>{0} insolvencích</b></a>", " se vyskytuje v <a href='" + surl + "'><b>{0} insolvencích</b></a>")) jako @text[1].
 
                     </p>
                 }
@@ -220,20 +227,15 @@
                 @foreach (var kv in insolv.OrderByDescending(m => m.Value))
                 {
                     var text = kv.Key.Split('|');
+                    string surl = Util.GetSearchUrl("/insolvence/hledat", string.Format(osobaInsQuery, text[0]));
 
-                <p>
-                    Firmy navázané na @Devmasters.Core.TextUtil.ShortenText(Model.FullName(), 35)  @Html.Raw(Devmasters.Core.Lang.Plural.GetWithZero((int)kv.Value, " nejsou v insolvečním rejstříku", " se vyskytují v <b>jedné insolvenci</b>", " se vyskytují v <b>{0} insolvencích</b>", " se vyskytují v <b>{0} insolvencích</b>")) jako @text[1].
-                    @if (kv.Value > 0)
-                    {
-                        @Util.AddSearchBtn("/insolvence/hledat", $"osobaid{text[0]}:" + Model.NameId, $" Vyhledat je.")
-                        @Util.AddWatchDog(this.User, $"osobaid{text[0]}:" + Model.NameId, typeof(HlidacStatu.Lib.Data.Insolvence.Rizeni), "Pohlídat změny", "", prefillWDname: "Firmy navázané na  " + Model.FullName() + $" jako {text[2]} v insolvencích", btnCss: "btn btn-warning btn-xs", showWDList: false)
-                    }
-                    else
-                    {
-                        @Util.AddWatchDog(this.User, $"osobaid{text[0]}:" + Model.NameId, typeof(HlidacStatu.Lib.Data.Insolvence.Rizeni), $"Upozornit, když se stane {text[3]}", "", prefillWDname: "Firmy navázané na " + Model.FullName() + $" jako {text[2]} v insolvencích", btnCss: "btn btn-warning btn-xs", showWDList: false)
-                    }
+                    <p>
+                        Firmy navázané na @Devmasters.Core.TextUtil.ShortenText(Model.FullName(), 35)
+                        @Html.Raw(Devmasters.Core.Lang.Plural.GetWithZero((int)kv.Value,
+                           " nejsou v insolvečním rejstříku", " se vyskytují v <a href='" + surl + "'><b>jedné insolvenci</b></a>", " se vyskytují v <a href='" + surl + "'><b>{0} insolvencích</b></a>", " se vyskytují v <a href='" + surl + "'><b>{0} insolvencích</b></a>")) jako @text[1].
 
-                </p>
+
+                    </p>
                 }
                 <div class="obsah_top"><a href="#_top">△ nahoru</a></div>
 
@@ -253,18 +255,16 @@
                 @foreach (var kv in vzakaz.OrderByDescending(m => m.Value))
                 {
                     var text = kv.Key.Split('|');
+                    string surl = Util.GetSearchUrl("/verejnezakazky/hledat", $"osobaid{text[0]}:" + Model.NameId);
 
                     <p>
-                        Firmy navázané na @Devmasters.Core.TextUtil.ShortenText(Model.FullName(), 35)  @Html.Raw(Devmasters.Core.Lang.Plural.GetWithZero((int)kv.Value, $" jsme ve veřejných zakázkach jako {text[1]} nenašli", $" se vyskytují v <b>jedné veřejné zakázce</b> jako {text[1]}", $" se vyskytují v <b>{{0}} veřejných zakázkách</b> jako {text[1]}", $" se vyskytují v <b>{{0}} veřejných zakázkach</b> jako {text[1]}")).
-                        @if (kv.Value > 0)
-                        {
-                            @Util.AddSearchBtn("/verejnezakazky/hledat", $"osobaid{text[0]}:" + Model.NameId, $" Vyhledat zakázky.")
-                            @Util.AddWatchDog(this.User, $"osobaid{text[0]}:" + Model.NameId, typeof(HlidacStatu.Lib.Data.VZ.VerejnaZakazka), "Pohlídat změny", "", prefillWDname: "Hlídat " + Model.FullName() + $" jako {text[1]} ve veřejných zakázkach", btnCss: "btn btn-warning btn-xs", showWDList: false)
-                        }
-                        else
-                        {
-                            @Util.AddWatchDog(this.User, $"osobaid{text[0]}:" + Model.NameId, typeof(HlidacStatu.Lib.Data.VZ.VerejnaZakazka), $"Upozornit, když se stane {text[3]}", "", prefillWDname: "Hlídat " + Model.FullName() + $" jako {text[1]} ve veřejných zakázkach", btnCss: "btn btn-warning btn-xs", showWDList: false)
-                        }
+                        Firmy navázané na @Devmasters.Core.TextUtil.ShortenText(Model.FullName(), 35)
+                        @Html.Raw(Devmasters.Core.Lang.Plural.GetWithZero((int)kv.Value,
+                           $" jsme ve veřejných zakázkach jako {text[1]} nenašli",
+                           $" se vyskytují v <a href='{surl}'><b>jedné veřejné zakázce</b></a> jako {text[1]}",
+                           $" se vyskytují v <a href='{surl}'><b>{{0}} veřejných zakázkách</b></a> jako {text[1]}",
+                           $" se vyskytují v <a href='{surl}'><b>{{0}} veřejných zakázkach</b></a> jako {text[1]}"
+                           )).
 
                     </p>
                 }
@@ -277,22 +277,6 @@
         @{
             List<string> tabs = new List<string>();
             List<string> results = new List<string>();
-
-            tabs.Add("Základní info");
-            string zaklInfo = $"<h4>Hledání informací s vazbou na {Model.FullName()}</h4>"
-                + "<p>"
-                + $"Pokud napíšete do hledání text <code>osobaId:{Model.NameId}</code>, zobrazí se smlouvy, veřejné zakázky, dary a další informace, které mají vazbu na " 
-                + $" {Model.FullName()} nebo firmy touto osobou přímo či nepřímo vlastněnou či řízenou."
-                + "</p>"
-
-                + "<h4>Sdílení</h4>"
-                + "<div>"
-                + Util.ShareFacebook(Model.GetUrl(false)).ToHtmlString()
-                + Util.ShareTwitter(Model.GetUrl(false), $"{Model.Jmeno} na @HlidacStatu - {Model.InfoFacts().First().Render(false)}").ToHtmlString()
-                + Util.ShareWidget(Model.GetUrl(false))
-                + "</div>";
-
-            results.Add(zaklInfo);
 
 
             if (insRes.IsValid && insRes.Total > 0)
