--- a/Web.Statu/Views/Insolvence/Rizeni.cshtml
+++ b/Web.Statu/Views/Insolvence/Rizeni.cshtml
@@ -63,6 +63,11 @@
 }
 else
 {
+    if (!Model.Rizeni.OnRadar)
+    {
+        @Html.Partial("_OnRadarInfo")
+    }
+
     @Html.Partial("_Status", Model)
 }
 
