--- a/Web.Statu/Views/Insolvence/TextDokumentu.cshtml
+++ b/Web.Statu/Views/Insolvence/TextDokumentu.cshtml
@@ -7,17 +7,22 @@
 
 @section breadcrumb
 {
-		<ol class="breadcrumb">
-			<li><a href="/">Hlídač Státu</a></li>
-			<li><a href="@Url.Action("Index", "Insolvence")">Hlídač Insolvencí</a></li>
-			<li><a href="@Url.Action("Rizeni", "Insolvence", new { id = Model.UrlId })">Insolvence @Model.SpisovaZnacka</a></li>
-			<li><a href="@Url.Action("Dokumenty", "Insolvence", new { id = Model.UrlId })">Dokumenty</a></li>
-			<li class="active">@ViewBag.SubTitle</li>
-		</ol>
+	<ol class="breadcrumb">
+		<li><a href="/">Hlídač Státu</a></li>
+		<li><a href="@Url.Action("Index", "Insolvence")">Hlídač Insolvencí</a></li>
+		<li><a href="@Url.Action("Rizeni", "Insolvence", new { id = Model.UrlId })">Insolvence @Model.SpisovaZnacka</a></li>
+		<li><a href="@Url.Action("Dokumenty", "Insolvence", new { id = Model.UrlId })">Dokumenty</a></li>
+		<li class="active">@ViewBag.SubTitle</li>
+	</ol>
 }
 
 @if (Model != null)
 {
+	if (Model.Rizeni.OnRadar)
+	{
+		@Html.Partial("_OnRadarInfo")
+	}
+
 	<p>
 		<b>Upozornění</b>: Text dokumentu byl získán strojově a nemusí přesně odpovídat originálu. Zejména u strojově nečitelných dokumentů, kde jsme použili OCR.
 		<a href="@Model.Dokument.Url" target="_blank">Originální dokument stáhnete zde</a>
