--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -234,6 +234,7 @@
                 <li class="navbar__watchers">
                     <a href="/smlouvy">Smlouvy</a>
                     <a href="/VerejneZakazky">Veřejné zakázky</a>
+                    <a href="/Dotace">Dotace</a>
                     <a href="/Insolvence">Insolvence</a>
                     <a href="/sponzori">Sponzoři</a>
                     <a href="/StatniWeby">Weby státu<sup style="top:0;text-decoration:none;color:#777;">@(HlidacStatu.Lib.Data.External.Zabbix.ZabTools.Weby()?.Count().ToString() ?? "")</sup></a>
